extends Control

func _on_Level01_pressed():
	get_tree().change_scene("res://levels/Level01.tscn")

func _on_Level02_pressed():
	get_tree().change_scene("res://levels/Level02.tscn")

func _on_Level03_pressed():
	get_tree().change_scene("res://levels/Level03.tscn")

func _on_Level04_pressed():
		get_tree().change_scene("res://levels/Level04.tscn")